added logo and banner lgu

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -17,7 +17,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="">
   <meta name="author" content="Codedthemes" />
-  <link rel="icon" href="{% static 'jvf/JVF_logo.png'%}" type="image/x-icon">
+  <link rel="icon" href="{% static 'tagana_an/ico_logo.jpg'%}" type="image/x-icon">
 
   <!-- Favicon icon -->
   <link rel="stylesheet" href="{% static 'premium/assets/sweetalert2/sweetalert2.min.css'%}">
