--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -19,13 +19,13 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Codedthemes" />
 	<!-- Favicon icon -->
-	<link rel="icon" href="{% static 'jvf/JVF_logo.png'%}" type="image/x-icon">
+	<link rel="icon" href="{% static 'tagana_an/ico_logo.jpg'%}" type="image/x-icon">
 	<!-- vendor css -->
 	<link rel="stylesheet" href="{% static 'premium/assets/css/style.css'%}">
 	<style>
 	.bg-img {
 			/* The image used */
-			background-image: url("{% static 'jvf/JVF_Banner.jpeg' %}");
+			background-image: url("{% static 'tagana_an/Municipal-Hall.jpg'%}");
 
 			/* Control the height of the image */
 			min-height: 100vh;
