--- a/application/templates/components/incoming_document_create.html
+++ b/application/templates/components/incoming_document_create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block 'document_active' %}active{% endblock %}
+{% block 'incoming_document_active' %}active{% endblock %}
 
 {% block 'content' %}
 <div class="col-md-12">
@@ -17,8 +17,7 @@
 <script>
   function form_load(){
     $.ajax({
-      url: '{% url 'document_update_api' %}',
-      data: {'id':"{{document.id}}"},
+      url: '{% url 'incoming_document_create_api' %}',
       type: 'get',
       dataType: 'json',
       success:function(data){
