--- a/application/templates/pages/outgoing_document/page_forms.html
+++ b/application/templates/pages/outgoing_document/page_forms.html
@@ -9,12 +9,6 @@
 </div>
 {% block 'script' %}
 <script>
-  $(document).on('click', '#button-submit', function(){
-    return confirm('Are you sure you want to add this?');
-  });
-  $(document).on('click', '#button-change', function(){
-    return confirm('Are you sure you want to change this?');
-  });
   $(document).ready(function () {
     var csrftoken = getCookie('csrftoken');
     $(window).keydown(function(event){
@@ -24,48 +18,62 @@
       }
     });
 
+    // start
     $(".custom-form").submit(function (event) {
-      $("#button-submit").addClass("disabled", true);
       event.preventDefault();
-      var form = $(this);
-      var formData = new FormData($(form)[0]);
-      $.ajax({
-        url: form.attr('data-url'),
-        data: formData,
-        type: form.attr('method'),
-        dataType: 'json',
-        beforeSend: function(xhr, settings) {
-          if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-          }
-          $("#button-submit").addClass("disabled", true);
-        },
-        processData: false,
-        contentType: false,
-        success: function(data){
-          Toast.fire({
-            type: data.message_type,
-            title: data.message_title
-          });
-          if (data.valid){
-            if (data.url){
-              window.location.href = data.url;
-            }
-            form_load();
-            $("#button-submit").addClass("disabled", false);
-          }
-        },
-        error:function(error){
-          Toast.fire({
-            type: 'error',
-            title: 'ERROR Connection Lost.'
-          });
-          $("#button-submit").addClass("disabled", false);
-        },
+      Swal.fire({
+        text: "Are you sure do you want to {% if is_Create %}save{% else %}update{% endif %} this record?",
+        type: 'info',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes'
+      }).then((result) => {
 
-      })
-      return false;
+        if (result.value === true){
+          var form = $(this);
+          var formData = new FormData($(form)[0]);
+          $.ajax({
+            url: form.attr('data-url'),
+            data: formData,
+            type: form.attr('method'),
+            dataType: 'json',
+            beforeSend: function(xhr, settings) {
+              if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+              }
+              $("#button-submit").addClass("disabled", true);
+            },
+            processData: false,
+            contentType: false,
+            success: function(data){
+              Toast.fire({
+                type: data.message_type,
+                title: data.message_title
+              });
+              if (data.valid){
+                if (data.url){
+                  window.location.href = data.url;
+                }
+                form_load();
+                $("#button-submit").addClass("disabled", false);
+              }
+            },
+            error:function(error){
+              Toast.fire({
+                type: 'error',
+                title: 'ERROR Connection Lost.'
+              });
+              $("#button-submit").addClass("disabled", false);
+            },
+
+          })
+          return false;
+        }
+      });
+
     });
+    // end
 
   });
 
