--- a/application/templates/pages/dashboard.html
+++ b/application/templates/pages/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block 'content' %}
-<div class="col-12" id="dashboard_content">
+<div class="col-12 bg-img" id="dashboard_content">
   <div class="row">
     <!-- order-card start -->
     <div class="col-md-6 col-xl-3">
