cleaned codes template and views

--- a/application/templates/pages/order_document/x_page_table.html
+++ b/application/templates/pages/order_document/x_page_table.html
@@ -5,7 +5,7 @@
   <td style="white-space:normal;">
     <a href="{{p.file.url}}" target="_blank"><u><b>{{p.description.upper}}</b></u><i class="fa fa-file-pdf ml-2 text-danger"></i></a><br>
     <small>
-      Date Received : {{p.date_received}} | Size : {{p.file.size|filesizeformat}}<br>
+      Date Received : {{p.date_signed}} | Size : {{p.file.size|filesizeformat}}<br>
       Uploader : {{p.user.username}}
     </small>
   </td>
