--- a/application/templates/pages/ordinance_resolution_document/x_page_table.html
+++ b/application/templates/pages/ordinance_resolution_document/x_page_table.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-{% for p in incoming_document %}
+{% for p in record %}
 <tr>
   <td>{{forloop.counter|add:start}}</td>
   <td style="white-space:normal;">
