--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -74,6 +74,9 @@
           <li class="nav-item {% block 'order_document_active' %}{% endblock %}">
             <a href="{% url 'order_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-file"></i></span><span class="pcoded-mtext">Order Document</span></a>
           </li>
+          <li class="nav-item {% block 'ordinance_resolution_active' %}{% endblock %}">
+            <a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-file"></i></span><span class="pcoded-mtext"><small>Ordinance & Resolution</small></span></a>
+          </li>
           <li class="nav-item">
             <a href="{% url 'security' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span class="pcoded-mtext">Security</span></a>
           </li>
