--- a/application/templates/pages/ordinance_resolution_document/x_page_create.html
+++ b/application/templates/pages/ordinance_resolution_document/x_page_create.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block 'year_active' %}active{% endblock %}
-
+{% block 'incoming_document_active' %}active{% endblock %}
 {% block 'content' %}
 <div class="col-md-12">
   <div class="card" id="form">
@@ -12,13 +11,13 @@
 {% endblock %}
 
 
+
 {% block 'script' %}
 
 <script>
   function form_load(){
     $.ajax({
-      url: '{% url 'year_update_api' %}',
-      data: {'id':"{{year.id}}"},
+      url: '{{URL_CREATE}}',
       type: 'get',
       dataType: 'json',
       success:function(data){
