--- a/application/templates/pages/ordinance_resolution_document/x_page_update.html
+++ b/application/templates/pages/ordinance_resolution_document/x_page_update.html
@@ -17,7 +17,8 @@
 <script>
   function form_load(){
     $.ajax({
-      url: '{% url 'incoming_document_create_api' %}',
+      url: '{{URL_UPDATE}}',
+      data: {'id':"{{incoming_document.id}}"},
       type: 'get',
       dataType: 'json',
       success:function(data){
