--- a/application/templates/pages/ordinance_resolution_document/x_page_table.html
+++ b/application/templates/pages/ordinance_resolution_document/x_page_table.html
@@ -9,9 +9,9 @@
       Uploader : {{p.user.username}}
     </small>
   </td>
-  <td>{{p.incoming_category}}</td>
+  <td>{{p.category}}</td>
   <td class="btn-page">
-    <a href="{% url 'incoming_document_update' p.id %}" type="button" class="btn btn-warning btn-sm" name="button"><i class="feather icon-edit mr-1"></i>Edit</a>
+    <a href="{% url 'ordinance_resolution_document_update' p.id %}" type="button" class="btn btn-warning btn-sm" name="button"><i class="feather icon-edit mr-1"></i>Edit</a>
   </td>
 </tr>
 {% empty %}
