--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -75,7 +75,7 @@
             <a href="{% url 'order_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-file"></i></span><span class="pcoded-mtext">Order Document</span></a>
           </li>
           <li class="nav-item {% block 'ordinance_resolution_active' %}{% endblock %}">
-            <a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-file"></i></span><span class="pcoded-mtext"><small>Ordinance & Resolution</small></span></a>
+            <a href="{% url 'ordinance_resolution_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-file"></i></span><span class="pcoded-mtext"><small>Ordinance & Resolution</small></span></a>
           </li>
           <li class="nav-item">
             <a href="{% url 'security' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span class="pcoded-mtext">Security</span></a>
