--- a/application/templates/pages/ordinance_resolution_document/page_forms.html
+++ b/application/templates/pages/ordinance_resolution_document/page_forms.html
@@ -12,7 +12,7 @@
 {% block 'script' %}
 <script src="{% static 'premium/assets/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js'%}"></script>
 <script>
-  var $datepicker1 = $('#id_date_received');
+  var $datepicker1 = $('#id_date_approved');
   $datepicker1.datepicker({
     autoclose: true,
     format : 'yyyy-mm-dd',
