fixed dashboard module for reporting purpose

--- a/application/templates/pages/dashboard/page_view.html
+++ b/application/templates/pages/dashboard/page_view.html
@@ -8,32 +8,32 @@
     <div class="col-md-6 col-xl-3">
       <div class="card bg-c-blue order-card">
         <div class="card-body p-2">
-          <h6 class="text-white">Document</h6>
-          <h5 class="text-right text-white"><i class="feather icon-clipboard float-left"></i><span>{{document_count}}</span></h5>
+          <h6 class="text-white">{{title_1}}</h6>
+          <h5 class="text-right text-white"><i class="feather icon-folder float-left"></i><span>{{incoming_document_count}}</span></h5>
         </div>
       </div>
     </div>
     <div class="col-md-6 col-xl-3">
       <div class="card bg-c-green order-card">
         <div class="card-body p-2">
-          <h6 class="text-white">Category</h6>
-          <h5 class="text-right text-white"><i class="feather icon-file float-left"></i><span>{{category_count}}</span></h5>
+          <h6 class="text-white">{{title_2}}</h6>
+          <h5 class="text-right text-white"><i class="feather icon-folder float-left"></i><span>{{outgoing_document_count}}</span></h5>
         </div>
       </div>
     </div>
     <div class="col-md-6 col-xl-3">
       <div class="card bg-c-yellow order-card">
         <div class="card-body p-2">
-          <h6 class="text-white">Total Uploaded</h6>
-          <h5 class="text-right text-white"><i class="feather icon-upload float-left"></i><span>{{total_size|filesizeformat}}</span></h5>
+          <h6 class="text-white">{{title_3}}</h6>
+          <h5 class="text-right text-white"><i class="feather icon-folder float-left"></i><span>{{order_document_count}}</span></h5>
         </div>
       </div>
     </div>
     <div class="col-md-6 col-xl-3">
       <div class="card bg-c-red order-card">
         <div class="card-body p-2">
-          <h6 class="text-white">Year</h6>
-          <h5 class="text-right text-white"><i class="feather icon-calendar float-left"></i><span>{{year_count}}</span></h5>
+          <h6 class="text-white">{{title_4}}</h6>
+          <h5 class="text-right text-white"><i class="feather icon-folder float-left"></i><span>{{ordinance_resolution_document_count}}</span></h5>
         </div>
       </div>
     </div>
