--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -66,16 +66,16 @@
             <a href="{% url 'dashboard' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span></a>
           </li>
           <li class="nav-item {% block 'incoming_document_active' %}{% endblock %}">
-            <a href="{% url 'incoming_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-download-cloud"></i></span><span class="pcoded-mtext">Incoming Document</span></a>
+            <a href="{% url 'incoming_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-folder"></i></span><span class="pcoded-mtext">Incoming Document</span></a>
           </li>
           <li class="nav-item {% block 'outgoing_document_active' %}{% endblock %}">
-            <a href="{% url 'outgoing_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-clipboard"></i></span><span class="pcoded-mtext">Outgoing Document</span></a>
+            <a href="{% url 'outgoing_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-folder"></i></span><span class="pcoded-mtext">Outgoing Document</span></a>
           </li>
           <li class="nav-item {% block 'order_document_active' %}{% endblock %}">
-            <a href="{% url 'order_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-file"></i></span><span class="pcoded-mtext">Order Document</span></a>
+            <a href="{% url 'order_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-folder"></i></span><span class="pcoded-mtext">Order Document</span></a>
           </li>
           <li class="nav-item {% block 'ordinance_resolution_active' %}{% endblock %}">
-            <a href="{% url 'ordinance_resolution_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-file"></i></span><span class="pcoded-mtext"><small>Ordinance & Resolution</small></span></a>
+            <a href="{% url 'ordinance_resolution_document' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-folder"></i></span><span class="pcoded-mtext"><small>Ordinance & Resolution</small></span></a>
           </li>
           <li class="nav-item">
             <a href="{% url 'security' %}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span class="pcoded-mtext">Security</span></a>
@@ -115,8 +115,8 @@
   							<span>{{user.first_name}} {{user.last_name}}</span>
   						</div>
   						<ul class="pro-body">
-  							<li><a href="#" class="dropdown-item"><i class="feather icon-user"></i>My Account</a></li>
-                <li><a href="#" class="dropdown-item"><i class="feather icon-lock"></i>Change Password</a></li>
+  							<!-- <li><a href="#" class="dropdown-item"><i class="feather icon-user"></i>My Account</a></li>
+                <li><a href="#" class="dropdown-item"><i class="feather icon-lock"></i>Change Password</a></li> -->
   							<li><a href="https://www.buymeacoffee.com/sumania95" target="_blank" class="dropdown-item"><i class="feather icon-phone"></i>Buy Me a Coffee</a></li>
                 <li><a href="{% url 'logout' %}" class="dropdown-item"><i class="feather icon-log-out"></i>Logout</a></li>
   						</ul>
