server good fixed

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -48,11 +48,11 @@
 </head>
 <body class="">
   <!-- [ Pre-loader ] start -->
-  <div class="loader-bg">
-    <div class="loader-track">
-      <div class="loader-fill"></div>
-    </div>
-  </div>
+  <!--<div class="loader-bg"> start -->
+    <!--<div class="loader-track"> start -->
+      <!--<div class="loader-fill"></div> start -->
+    <!--</div> start -->
+  <!--</div> start -->
   <!-- [ Pre-loader ] End -->
   <!-- [ navigation menu ] start -->
   <nav class="pcoded-navbar menupos-fixed menu-light">
